# sonora

./: .gitignore  .python-version  Dockerfile  README.md  docker-compose.yaml  echotest.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
echo/: README.md  asgi.py  echo_pb2.py  echo_pb2_grpc.py  server.py  wsgi.py
grpcWSGI/: __version__.py  asgi.py  client.py  context.py  echotest.py  protocol.py  server.py
sonora/: __version__.py  aio.py  asgi.py  client.py  context.py  echotest.py  protocol.py  wsgi.py
test_server/: asgi.py  test.proto  wsgi.py
tests/: conftest.py  dev-requirements.txt  server.py  test_aio.py  test_asgi_helloworld.py  test_asgi_performance.py  test_grpcio_performance.py  test_helloworld.py  test_protocol.py  test_wsgi_helloworld.py  test_wsgi_performance.py
tests/protos/tests/: benchmark.proto  helloworld.proto
