[tool.poetry]
name = "sonora"
version = "0.2.3"
description = "A WSGI and ASGI compatible grpc-web implementation."
authors = ["Alex Stapleton <alexs@prol.etari.at>"]
license = "Apache-2.0"
homepage = "https://github.com/public/sonora"

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.57.0"
urllib3 = "^1.26.4"
aiohttp = "^3.7.4"
async-timeout = ">= 3.0.1, < 5"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.57.0"
pytest = "^6.2.3"
pytest-mockservers = "^0.6.0"
pytest-asyncio = "^0.15.1"
pytest-benchmark = "^3.4.1"
hypothesis = "^6.10.1"
bjoern = "^3.2.2"
uvicorn = "^0.13.4"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
tox = "^3.23.0"
daphne = "^3.0.2"
mypy = "0.910"
types-protobuf = "^3.17.4"
grpc-stubs = "^1.24.7"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".*_pb2.py$|echotest.py$"

[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "urllib3.*",
    "uvicorn.*",
    "daphne.*",
    "bjoern.*"

]
ignore_missing_imports = true